# Prompter

./: .env.example  .gitignore  README.md  idea.md  pyproject.toml
docs/: ARCHITECTURE.md  ORCHESTRATION_PLAN.md  POINTERS_NEEDED.md  PRD.md  SRS.md
prompter/: __init__.py  __main__.py  cli.py  config.py  graph.py  state.py
prompter/agents/: __init__.py  analyzer.py  architect.py  communication_designer.py  critic.py  packager.py  refiner.py
prompter/llm/: client.py  prompts.py  techniques.py
prompter/models/: __init__.py  critic_feedback.py  final_output.py  inter_agent_map.py  module_map.py  prompt_artifact.py
prompter/output/: __init__.py  json_writer.py  markdown_writer.py  scaffold_writer.py
prompter/prompt_templates/: analyzer_system.txt  architect_system.txt  communication_designer_system.txt  critic_system.txt  packager_system.txt  refiner_system.txt
prompter/utils/: checkpoint.py  logging.py  tokens.py
tasks/: lessons.md  todo.md
tests/: conftest.py
tests/integration/: test_analyzer.py  test_architect.py  test_checkpoint.py  test_cli_polish.py  test_communication_designer.py  test_critic.py  test_graph.py  test_packager.py  test_refiner.py
tests/regression/: test_real_api.py
tests/unit/: test_config.py  test_llm_client.py  test_models.py  test_state.py  test_token_counting.py
